tests/errors/jsonStringifyUnsupportedField.milo
// @error: jsonStringify: field 'tags' has unsupported type
struct Bad {
    name: string,
    tags: Vec<string>,
}

fn main(): i32 {
    var tags: Vec<string> = Vec.new()
    tags.push("x")
    let b = Bad {
        name: "a", tags: tags
    }
    print(jsonStringify(b))
    return 0
}
